--- a/css/party.css
+++ b/css/party.css
@@ -11,6 +11,9 @@
 .widget_ally
 {
 	position: relative;
+}
+.widget_ally .party-shadow
+{
 	filter: drop-shadow(-1px 3px 5px #000000d0);
 }
 .widget_ally_disconnected
@@ -94,7 +97,7 @@
 	border-radius: 15px;
 	white-space: nowrap;
 	overflow: hidden;
-	z-index: 1;
+	z-index: -1;
 	transition: left 0.6s, width 0.6s, background-position-x 0.8s;
 }
 
